<resources>
    <string name="app_name">SecuritySchedulingDo</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="base_url">http://183.230.182.149:19088/rend</string>

    <string name="picPath">d:/cmd/img/</string>

    <string name="panorama">全景图</string>
    <string name="plan">平面图</string>
    <string name="feature">特征图</string>
    <string name="profile">剖面图</string>
    <string name="basic">基本信息</string>
    <string name="disaster">灾害影响</string>
    <string name="geography">地理信息</string>
    <string name="ohter">其他</string>

</resources>
